Cassandra Java Driver CRUD Operations source files. Description: Added Book repository class to deal with all table operations like create and alter table structure. - Added test cases for the same. - Refactored other tests.