@@ -4,24 +4,25 @@ import com.datastax.driver.core.ResultSet;
 import com.datastax.driver.core.Session;
 import org.cassandra.connector.CassandraClusterConnector;
 import org.cassandra.schema.KeyspaceRepository;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
 
 public class CassKeyspaceTests {
+
+    CassandraClusterConnector dbClient;
     private KeyspaceRepository schemaRepository;
     private Session session;
 
     @Before
     public void connect() {
-        CassandraClusterConnector client = new CassandraClusterConnector();
-        client.connect("127.0.0.1", 9142);
-        this.session = client.getSession();
+        dbClient = new CassandraClusterConnector();
+        dbClient.connect("127.0.0.1", 9142);
+        this.session = dbClient.getSession();
         schemaRepository = new KeyspaceRepository(session);
     }
 
@@ -36,10 +37,14 @@ public class CassKeyspaceTests {
         List<String> matchedKeyspaces = result.all()
                 .stream()
                 .filter(r -> r.getString(0).equals(keyspaceName.toLowerCase()))
-                .map(r -> r.getString(0))
-                .collect(Collectors.toList());
+                .map(r -> r.getString(0)).toList();
 
         assertEquals(matchedKeyspaces.size(), 1);
         assertEquals(matchedKeyspaces.get(0), keyspaceName.toLowerCase());
+    }
+
+    @After
+    public void cleanup() {
+        dbClient.close();
     }
 }
